# wavs-regen-oracle

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  example-response.json  plan.md
.github/workflows/: docs-ci.yml
components/eth-price-oracle/src/: bindings.rs
components/regen-oracle/: Cargo.toml
components/regen-oracle/src/: lib.rs
components/wavs-regen-oracle/: Cargo.toml  Makefile
components/wavs-regen-oracle/src/: bindings.rs  lib.rs
docs/: custom-components.mdx  stac-oracle.md
docs/tutorial/: 1-overview.mdx  3-project.mdx  4-component.mdx  5-build.mdx  6-run-service.mdx
multiple-example/: README.md
script/: StacTrigger.s.sol  build_components.sh  build_service.sh  test_stac_query.sh  trigger_stac.sh
